# OOP_labs

./: README.md
lab_01/: CMakeLists.txt  README.md  func.cpp  func.h  main.cpp  task_01.cpp
lab_02/: CMakeLists.txt  Eleven.cpp  Eleven.h  README.md  main.cpp  tests.cpp
lab_03/: CMakeLists.txt  README.md  array.cpp  array.h  figure.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  tests.cpp  triangle.cpp  triangle.h
lab_04/: CMakeLists.txt  array.h  calculations.h  figure.h  main.cpp  rectangle.h  square.h  tests.cpp  triangle.h
lab_05/: CMakeLists.txt  README.md  allocator.h  list.h  main.cpp  tests.cpp
lab_06/: CMakeLists.txt  NPC.cpp  NPC.h  README.md  dragon.cpp  dragon.h  druid.cpp  druid.h  elf.cpp  elf.h  factory.cpp  factory.h  main.cpp  observer.cpp  observer.h  tests.cpp
lab_07/: CMakeLists.txt  dragon.cpp  dragon.h  druid.cpp  druid.h  elf.cpp  elf.h  main.cpp  npc.h  tests.cpp
